# notification-queue

./: Dockerfile  notification-queue.service  push_to_notifications.py  pyproject.toml  read.sh  requirements.txt  run.py  start.sh
notification_queue/: main.py
systemd/: notification-queue.service
tools/: push_to_notifications.py  read.py  read.sh
